--- a/test.html
+++ b/test.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
+<meta charset="UTF-8">
+<meta name="description" content="Free Web tutorials">
+<meta name="keywords" content="BootStrap,Angular Js,Start with angular,Learning Angular-Bootstrap">
+<meta name="author" content="Sonydaman">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <!-- Latest compiled and minified JavaScript -->
@@ -11,9 +15,14 @@
 <div class="container"  ng-app="myApp">
 <div class="row">
 		<div class="col-lg-12"> 
-		<h1>Angular Js</h1>
-		<p>Start Up Learning</p>
-		  <ul class="nav nav-tabs" role="tablist">
+		<div class="row">
+		<h3 class="text-center">Angular with Bootstrap Tabing</h3>
+		<p class="form-control">
+		<span class="pull-left">Beginner Angular Js </span>
+		<span class="pull-right">Start Up Learning angular with bootstrap</span>
+		</p>
+		</div> 
+		 <ul class="nav nav-tabs" role="tablist">
 			<li role="presentation"><a href="#MODEL" aria-controls="MODEL" role="tab" data-toggle="tab">Use Model</a></li>
 			<li role="presentation"><a href="#INITALING" aria-controls="INITALING" role="tab" data-toggle="tab"  ng-init="INITALING='USE INITALING';INITALINGTEXT='Initializing'">{{INITALINGTEXT}}</a></li>
 			<li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab" ng-init="expression='For expression';expressiontext='EXPRESSION'" >{{expressiontext}}</a></li>
@@ -344,8 +353,11 @@
 
 </div>
 
-
-
+<footer>
+	<section>
+		<p class="text-center"> Copyright <a class="btn btn-sm" href="www.sonydaman.com">sonydaman</a>@2015 </p>
+	</section>
+</footer>
 
 </body>
 </html>
