Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="javascripts/script.js"></script>
 
   <title>Angular</title>
-  <meta name="description" content="ADDING ALL PROJECTS">
+  <meta name="description" content="Angular with Bootstrap Tabing">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -25,7 +25,7 @@
       <h1 class="title">Angular</h1>
     </header>
     <div id="container">
-      <p class="tagline">ADDING ALL PROJECTS</p>
+      <p class="tagline">Angular with Bootstrap Tabing</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
@@ -36,10 +36,35 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          <h1>
-<a id="angular-js-beginer-learning" class="anchor" href="#angular-js-beginer-learning" aria-hidden="true"><span class="octicon octicon-link"></span></a>Angular Js Beginer Learning.</h1>
+          <p>Welcome to the ANGULAR wiki! 
+. Start Up Learning angular with bootstrap 
+. Beginner Angular Js 
+. Learn Angular Bootstrap Responsiveness 
+. Angular with Bootstrap Tabing</p>
 
-<p>ADDING ALL PROJECTS</p>
+<p>Controllers In External Files With filtering data</p>
+
+<p>AngularJS $http With filtering data</p>
+
+<p>HTML Forms</p>
+
+<p>Input Validation</p>
+
+<p>Full Template Review</p>
+
+<p>REPEATING HTML ELEMENTS The ng-repeat directive repeats an HTML element:</p>
+
+<p>HTML DOM HOW TO The ng-disabled Directive IN ANGULAR</p>
+
+<p>ANGULARJS APPLICATIONS HOW TO AngularJS Applications IN ANGULAR</p>
+
+<p>FOR EXPRESSION</p>
+
+<hr>
+
+<p>USE INITALING HOW TO USE INITALING IN ANGULAR</p>
+
+<p>USE MODAL bHOW TO USE MODEL IN ANGULAR</p>
         </article>
       </div>
     </div>
